# data2model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
data_to_model/: __init__.py  model_generator.py
data_to_model/console/: application.py
data_to_model/data_parsers/: __init__.py  csv_parser.py  data_parser.py  factory.py  types.py
data_to_model/generators/: _generator.py  _types.py  base_generator.py  data_class.py  dataclass_generator.py  factory.py
data_to_model/helpers/: __init__.py  camel_case_formatter.py  snake_case_formatter.py
data_to_model/models/: class_data.py  class_field.py  data_class_model.py
data_to_model/type_detectors/: __init__.py  _types.py  base_detector.py  simple_type_detector.py  type_detector.py
docs/: index.md
tests/: conftest.py  test_data_to_model.py  utils.py
tests/data_files/: example.csv  example.txt  example_tabs.csv  output_example_csv.txt
tests/test_data_parsers/: test_csv_parser.py  test_factory.py
tests/test_generators/: test_dataclass_generator.py
tests/test_helpers/: test_camel_case_formatter.py
tests/test_models/: test_class_data.py  test_class_field.py
tests/test_name_formatters/: test_snake_case_formatter.py
tests/test_type_detectors/: test_simple_type_detector.py
