[tool.poetry]
name = "data2model"
version = "0.1.0"
description = "Python library and CLI tool for converting data to different Python data classes"
authors = ["Dmitrii Kurlov <dmitriik@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest_async = "^0.1.1"
tox = "^3.24.5"
mkdocs-material = "^8.1.7"
mkdocstrings = "^0.17.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
